--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt-nodejs": "^0.0.31",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.5",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
