--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/bcrypt-nodejs": "^0.0.31",
     "@types/cookie-parser": "^1.4.3",
@@ -37,10 +38,13 @@
     "date-fns": "^2.29.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
